(fix) correct positioning of the account button on smaller devices

--- a/client/scss/ionic.app.scss
+++ b/client/scss/ionic.app.scss
@@ -126,6 +126,7 @@ hr {
   position: absolute;
   bottom: 0;
   left: 0;
+  margin-bottom: 3px!important;
 }
 
 .main-content {
